fix dark mode

--- a/site/styles/000/styler.css
+++ b/site/styles/000/styler.css
@@ -10,13 +10,6 @@ body {
 	font-family: WiiFont;
 }
 
-html {
-	background-image: url("../../assets/images/Nintendo Channel.png");
-	background-repeat: repeat;
-	cursor: url("../../assets/images/wii.cur"), default;
-	text-decoration: none;
-}
-
 a {
 	color: #00b0f4;
 	cursor: url("../../assets/images/wii-hover.cur"), default;
